# impersonate-gpt

./: .gitignore  README.md  pyproject.toml
impersonate_gpt/utils/: langchain_utils.py  text_processing.py
notebooks/: custom_prompt_chat.ipynb  cv_chatbot.ipynb  memory-agent-chatbot.ipynb
